# whisp

./: .env  .env.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_REFACTORED.md  BUG_FIX_SUMMARY.md  DEPLOYMENT_READY.md  Data_conversion.ipynb  EE_INPUT_TESTS.md  LICENSE  MANIFEST.in  OPTIMIZATION_RESULTS.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_TESTS.md  QUICKREF_AUTO_WHISP.md  QUICK_PERFORMANCE_GUIDE.md  QUICK_REFERENCE.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  SMART_PROCESSOR_README.md  TEST_RESULTS.md  WORKFLOW_ANALYSIS.md  WORKFLOW_DETAILED_TIMING.md  WORKFLOW_DIAGRAM.md  WORKFLOW_DOCUMENTATION_INDEX.md  WORKFLOW_EXAMPLES.md  WORKFLOW_QUICK_REFERENCE.md  alt_whisp_multiband_image.ipynb  alt_whisp_output_table.csv  alt_whisp_prep_multiband_image.ipynb  alt_whisp_reformat.ipynb  alt_whisp_stats.ipynb  bench_output.txt  benchmark_results.csv  clean_pre_commit_log.sh  combined_whisp_results.csv  contributing_guidelines.md  copy_whisp_output_table.csv  (+35 more)
.github/: USAGE_STATS.md  copilot-instructions.md
.github/scripts/: USAGE_STATS.md  collect_metrics.py  country_downloads.csv  usage_metrics.csv
.github/usage_metrics/: METRICS_NOTES.md  collect_metrics.py  country_downloads.csv  usage_metrics.csv
.github/workflows/: collect_usage_metrics.yml  workflow.yml
.ipynb_checkpoints/: README-checkpoint.md  dpi_prototype_v0-checkpoint.ipynb  output_stats_wide_format-checkpoint.csv  polm_v0-checkpoint.ipynb  temp_stats_long_format-checkpoint.csv
backup_csvs/: readme_backup_csv
csvs/: whisp_output_table_20240304_104621.csv  whisp_output_table_20240304_132524.csv
dataset_properties/: make_processing_lists_from_lookup.py  set_image_properties.py  set_properties_special_cases.py
dataset_properties/.ipynb_checkpoints/: make_processing_lists_from_lookup-checkpoint.py  set_image_properties-checkpoint.py  set_properties_special_cases-checkpoint.py
datasets/: __init__.py  birdlife_kbas_biodiversity.py  combining_datasets.py  creaf_descals_palm.py  esa_worldcover_trees.py  esri_lulc_trees.py  eth_kalischek_cocoa.py  fao_gaul_countries.py  fdap_palm.py  gadm_countries.py  glad_gfc_10pc.py  glad_lulc_stable.py  glad_pht.py  image_descriptions.ipynb  jaxa_forest.py  jrc_gfc_2020.py  jrc_tmf_disturbed.py  jrc_tmf_plantations.py  jrc_tmf_prep.py  jrc_tmf_reclassify.py  jrc_tmf_undisturbed.py  reproject_to_template.py  template_images.py  wcmc_oecms_protection.py  wcmc_wdpa_protection.py  wur_radd_alerts.py
datasets/.ipynb_checkpoints/: __init__-checkpoint.py  birdlife_kbas_biodiversity-checkpoint.py  creaf_descals_palm-checkpoint.py  esri_lulc_trees-checkpoint.py  fdap_palm-checkpoint.py  glad_lulc_stable-checkpoint.py  glad_pht-checkpoint.py  jrc_tmf_disturbed-checkpoint.py  jrc_tmf_plantations-checkpoint.py  template_images-checkpoint.py  wcmc_oecms_protection-checkpoint.py  wur_radd_alerts-checkpoint.py
docs/: acrop_risk_decision_tree.md  pcrop_risk_decision_tree.md  timber_risk_decision_tree.md
gee/: _create_image_collection.py  creaf_descals_palm.py  esri_lulc.py  eth_kalischek_cocoa.py  fao_gaul_countries.py  fdap_palm.py  glad_gfc.py  glad_lulc.py  glad_pht.py  image_descriptions.ipynb  jaxa_forest.py  jrc_tmf.py  wcmc_oecms_protection.py  wcmc_wdpa_protection.py
gee/.ipynb_checkpoints/: birdlife_kbas_biodiversity-checkpoint.py  esri_lulc-checkpoint.py  fao_gaul_countries-checkpoint.py  glad_gfc-checkpoint.py  glad_pht-checkpoint.py  image_descriptions-checkpoint.ipynb  jrc_tmf-checkpoint.py  template_images-checkpoint.py  wcmc_oecms_protection-checkpoint.py  wcmc_wdpa_protection-checkpoint.py  (+1 more)
input_examples/: brazil_single_polygon.geojson  example_geojson.geojson  example_shapefile.shp.geojson  geoids_example.txt  geojson_example.geojson  nicaragua_coffee_efico.geojson  shapefile_example.dbf  shapefile_example.shp  shapefile_example.shx
misc/: _create_country_lookup_gadm.py  _create_country_lookup_gaul.py  _create_image_collection.py  _create_lookups_gadm.py  _create_random_polygons.py  _roi_creation.py  export_to_image_collection.py
modules/: Untitled.ipynb  agstack_setup.py  agstack_to_gee.py  area_stats.py  calling_notebooks.py  country_allocation.py  datasets.py  file_to_ceo.py  gee_initialize.py  image_prep.py  multiband_stats.py  old_agstack_setup.py  old_multiband_stats.py  random_polys.py  risk.py  risk_timber.py  spare_functions.py  stats.py  tidy_tables.py  utils.py
notebooks/: Colab_whisp_geojson_to_csv.ipynb  admin_code_linking.ipynb  backup.ipynb  backup_client_side_random_test_whisp_geojson_to_csv.ipynb  basic_concurrent_vs_sequential_minimal.ipynb  basic_runs_concurrent_vs_non_concurrent_stats.ipynb  benchmark_results.csv  benchmarking.ipynb  client_side_whisp_geojson_to_csv copy.ipynb  concurrent_ai_whisp_geojson_to_csv.ipynb  data_conversion.ipynb  downloaded_whisp_results_output.csv  example.csv  graphs.ipynb  maps.ipynb  optimized_whisp_results.csv  summed_whisp_output_table.csv  test_concurrent_stats.ipynb  whisp_cog_workflow.ipynb  whisp_ee_asset_to_drive.ipynb  whisp_export_cog.ipynb  whisp_feature_collection.ipynb  whisp_geo_id.ipynb  whisp_geojson.ipynb  whisp_geojson_to_csv.ipynb  whisp_geojson_to_drive.ipynb  whisp_output_table_server_side.csv  whisp_output_table_w_risk.csv  working_file_whisp_feature_collection.ipynb
old/: old_io.ipynb  whisp_stats.ipynb
parameters/: __init__.py  config_asr_credentials.py  config_asr_url_info.py  config_ceo.py  config_directory.py  config_imports.py  config_lookups.py  config_output_naming.py  config_radd_alerts.py  config_random_features.py  config_runtime.py  config_stats_calc.py  lookup_gadm_country_codes_to_iso3.csv  lookup_gadm_country_codes_to_names.csv  lookup_gee_datasets.csv  lookup_recoding_jrc_tmf_product.csv
src/: agstack_to_gee.py  assess_risk.py  datasets.py  file_to_ceo.py  gee_initialize.py  logger.py  pd_schemas.py  stats.py  tidy_tables.py  utils.py
test/: conftest.py  test_assess_risk.py
tests/: conftest.py
whisp/: __init__.py
whisp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+247 files in other folders)
