[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisp"
description = "A description of the Whisp package"
version = "0.0.1"
authors = [
    {name = "Andy Arnell", email = "andrew.arnell@fao.org"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["whisp", "geospatial", "data-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",  # Indicate alpha release
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "earthengine-api",
    "geemap",
    "numpy<2",  # https://github.com/unionai-oss/pandera/issues/1656
    "pandas",
    "pandera",
    "country_converter",
    "geojson",
    "python-dotenv",
    "setuptools"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "ruff"
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"whisp.parameters" = ["lookup_gee_datasets.csv", "lookup_context_and_metadata.csv"]

[tool.setuptools]
license_files = ["LICENSE"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
fix = true
select = [
    "A", "ANN", "ARG", "B", "C", "COM", "C90", "E", "ERA", "F", "I", "N", "PGH", "PL", "PLE", "PLR", "PLW", "PT",
    "PTH", "Q", "RET", "RUF", "SLF", "SIM", "TID", "TRY", "UP", "W", "YTT"
]
ignore = [
    "A003", "ANN002", "ANN003", "ANN101", "ANN102", "ANN401", "N805", "N818", "PLR0913", "RET504", "RET505"
]
fixable = [
    "A", "ANN", "ARG", "B", "C", "COM", "C90", "E", "ERA", "F", "I", "PGH", "PL", "PLE", "PLR", "PLW", "PT",
    "PTH", "Q", "RET", "RUF", "SLF", "SIM", "TID", "TRY", "UP", "W", "YTT"
]
unfixable = []

exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".pants.d", ".pytype", ".ruff_cache", ".tox", ".venv", "__pypackages__",
    "_build", "buck-out", "build", "dist", "venv", "pages", "tests"
]

line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10