[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "whisp"
version = "0.0.1"
description = "Whisp (What is in that plot) is an open-source solution which helps to produce relevant forest monitoring information and support compliance with deforestation-related regulations."
authors = ["Andy Arnell <andrew.arnell@fao.org>"]
readme = "README.md"
license = "MIT"
keywords = ["whisp", "geospatial", "data-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = ">=3.10"
earthengine-api = "*"
geemap = "*"
numpy = "<2"
pandas = "*"
pandera = "*"
country_converter = "*"
geojson = "*"
python-dotenv = "*"
setuptools = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
ruff = "*"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"whisp.parameters" = ["lookup_gee_datasets.csv", "lookup_context_and_metadata.csv"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

[tool.ruff]
fix = true
select = [
    "A", "ANN", "ARG", "B", "C", "COM", "C90", "E", "ERA", "F", "I", "N", "PGH", "PL", "PLE", "PLR", "PLW", "PT",
    "PTH", "Q", "RET", "RUF", "SLF", "SIM", "TID", "TRY", "UP", "W", "YTT"
]
ignore = [
    "A003", "ANN002", "ANN003", "ANN101", "ANN102", "ANN401", "N805", "N818", "PLR0913", "RET504", "RET505"
]
fixable = [
    "A", "ANN", "ARG", "B", "C", "COM", "C90", "E", "ERA", "F", "I", "PGH", "PL", "PLE", "PLR", "PLW", "PT",
    "PTH", "Q", "RET", "RUF", "SLF", "SIM", "TID", "TRY", "UP", "W", "YTT"
]
unfixable = []

exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".pants.d", ".pytype", ".ruff_cache", ".tox", ".venv", "__pypackages__",
    "_build", "buck-out", "build", "dist", "venv", "pages", "tests"
]

line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
max-complexity = 10